[feat] update header icon

--- a/app/src/main/res/drawable/ic_search_pub.xml
+++ b/app/src/main/res/drawable/ic_search_pub.xml
@@ -1,129 +1,129 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="117dp"
-    android:height="116dp"
-    android:viewportWidth="117"
-    android:viewportHeight="116">
+    android:width="100dp"
+    android:height="74dp"
+    android:viewportWidth="100"
+    android:viewportHeight="74">
   <path
-      android:pathData="M21.55,44.93C21.65,44.39 22.16,44.02 22.71,44.11L62.83,50.83C63.38,50.92 63.75,51.44 63.65,51.99L54.78,104.93C56.6,105.52 57.76,107.36 57.43,109.29C57.11,111.23 55.41,112.59 53.51,112.55L53.5,112.6L11.4,105.54L11.41,105.5C9.58,104.93 8.41,103.08 8.74,101.14C9.06,99.19 10.77,97.83 12.68,97.88L13.11,95.31L7.95,94.45C2.76,93.58 -0.74,88.67 0.13,83.48L5.16,53.43C6.03,48.24 10.94,44.74 16.12,45.61L21.3,46.48L21.55,44.93ZM20.27,52.57L17.54,52.11C14.27,51.56 11.17,53.77 10.62,57.05L6.47,81.8C5.93,85.08 8.14,88.17 11.41,88.72L14.14,89.18L20.27,52.57Z"
+      android:pathData="M18.28,38.9C18.38,38.35 18.89,37.98 19.44,38.08L53.56,43.83C54.11,43.92 54.48,44.44 54.39,44.98L46.8,90.52C48.36,91.04 49.35,92.62 49.07,94.28C48.8,95.95 47.34,97.12 45.71,97.09L45.7,97.13L45.24,97.05L45.2,97.05L30.13,94.51L9.6,91.05L9.61,91.01C8.04,90.5 7.04,88.91 7.32,87.25C7.6,85.58 9.06,84.4 10.7,84.44L11.07,82.22L7.98,81.7C2.79,80.83 -0.71,75.91 0.15,70.73L4.04,47.38C4.9,42.2 9.8,38.7 14.99,39.57L18.09,40.09L18.28,38.9ZM17.21,45.35L15.71,45.1C12.43,44.54 9.34,46.75 8.79,50.03L5.51,69.75C4.97,73.03 7.18,76.13 10.45,76.68L11.95,76.93L17.21,45.35Z"
       android:fillColor="#F5D583"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M49.61,45.85C49.61,46.78 49.52,47.69 49.34,48.57L22.71,44.11C22.51,44.08 22.32,44.1 22.15,44.18C22.98,37.36 28.79,32.07 35.83,32.07C40.46,32.07 44.55,34.35 47.05,37.85C47.45,37.68 47.89,37.58 48.36,37.58C50.16,37.58 51.61,39.04 51.61,40.84C51.61,42.25 50.72,43.45 49.47,43.9C49.56,44.54 49.61,45.19 49.61,45.85Z"
+      android:pathData="M42.37,39.55C42.37,40.36 42.29,41.14 42.14,41.9L19.44,38.08C19.21,38.04 19,38.08 18.81,38.17C19.49,32.26 24.49,27.67 30.55,27.67C34.52,27.67 38.03,29.63 40.17,32.65C40.52,32.5 40.89,32.42 41.29,32.42C42.83,32.42 44.08,33.68 44.08,35.23C44.08,36.44 43.32,37.48 42.25,37.87C42.33,38.42 42.37,38.98 42.37,39.55Z"
       android:fillColor="#FCF2E4"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M29.26,54.72L22.55,96.71"
+      android:pathData="M24.92,47.2L19.16,83.42"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#E2AA55"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M41.29,57.23L34.58,99.21"
+      android:pathData="M35.23,49.37L29.47,85.59"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#E2AA55"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M43.21,110.87L53.5,112.6L53.51,112.55C55.41,112.59 57.11,111.23 57.43,109.29C57.76,107.36 56.6,105.52 54.78,104.93L63.65,51.99C63.75,51.44 63.38,50.92 62.83,50.83L52.82,49.16L43.21,110.87Z"
+      android:pathData="M36.88,95.64L45.2,97.05L45.24,97.05L45.7,97.13L45.71,97.09C47.34,97.12 48.8,95.95 49.07,94.28C49.35,92.62 48.36,91.04 46.8,90.53L54.39,44.98C54.48,44.44 54.11,43.92 53.56,43.83L45.12,42.4L36.88,95.64Z"
       android:fillColor="#FDB879"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M52.82,59.23L46.1,101.22"
+      android:pathData="M45.11,51.1L39.36,87.32"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#E2AA55"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M84.24,42.08C84.05,41.56 83.48,41.28 82.96,41.46L44.57,54.92C44.04,55.11 43.77,55.68 43.95,56.2L61.71,106.86C60.03,107.75 59.2,109.76 59.85,111.61C60.5,113.46 62.4,114.52 64.27,114.15L64.28,114.19L64.78,114.02L64.82,114L104.04,100.25L104.09,100.24L104.57,100.07L104.55,100.04C106.25,99.16 107.09,97.14 106.44,95.28C105.79,93.42 103.87,92.36 102,92.74L101.13,90.28L106.07,88.55C111.04,86.81 113.65,81.38 111.91,76.42L101.83,47.66C100.1,42.7 94.66,40.08 89.7,41.82L84.75,43.56L84.24,42.08ZM86.8,49.38L89.41,48.47C92.55,47.37 95.98,49.02 97.08,52.15L105.37,75.84C106.47,78.97 104.82,82.4 101.69,83.5L99.08,84.42L86.8,49.38Z"
+      android:pathData="M72.1,36.43C71.92,35.91 71.35,35.63 70.83,35.82L38.18,47.33C37.65,47.52 37.38,48.09 37.56,48.61L52.75,92.19C51.3,92.96 50.59,94.69 51.14,96.28C51.7,97.87 53.33,98.78 54.94,98.47L54.95,98.51L55.35,98.37C55.38,98.36 55.4,98.35 55.43,98.34L89.03,86.49C89.04,86.49 89.05,86.49 89.05,86.48C89.06,86.48 89.07,86.48 89.08,86.47L89.49,86.33L89.48,86.29C90.94,85.53 91.66,83.79 91.1,82.19C90.54,80.59 88.9,79.69 87.29,80L86.55,77.88L89.51,76.84C94.47,75.09 97.09,69.65 95.36,64.69L87.58,42.35C85.85,37.39 80.43,34.78 75.47,36.53L72.5,37.57L72.1,36.43ZM74.26,42.6L75.69,42.1C78.82,40.99 82.25,42.64 83.34,45.77L89.91,64.64C91.01,67.78 89.35,71.21 86.22,72.32L84.79,72.82L74.26,42.6Z"
       android:fillColor="#FFD771"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M54.87,59.45L69.99,99.19"
+      android:pathData="M46.88,51.29L59.84,85.57"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#FFB661"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M66.55,55.62L81.66,95.37"
+      android:pathData="M56.89,47.98L69.85,82.27"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#FFB661"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M69.4,29.06C76.53,29.06 82.4,34.48 83.11,41.42C83.06,41.43 83.01,41.45 82.96,41.46L66.94,47.08L68.93,52.24C70.19,55.53 68.54,59.21 65.26,60.47C62.52,61.52 59.5,60.55 57.85,58.29C57.33,59.47 56.36,60.46 55.06,60.96C52.48,61.95 49.6,60.66 48.61,58.09L47.06,54.05L44.57,54.92C44.11,55.08 43.84,55.54 43.9,56C42.87,56.02 41.78,55.8 40.84,55.12C38.64,53.52 39.42,49.11 40.09,47.1L40.09,47.1C40.23,43.48 43.2,40.59 46.85,40.59C47.5,40.59 48.12,40.68 48.71,40.85C49.3,37.29 52.4,34.57 56.12,34.57C56.83,34.57 57.52,34.67 58.17,34.86C60.67,31.35 64.77,29.06 69.4,29.06Z"
+      android:pathData="M59.34,25.07C65.46,25.07 70.5,29.76 71.1,35.76C71.01,35.77 70.92,35.78 70.83,35.82L57.23,40.61L58.94,45.09C60.01,47.91 58.6,51.08 55.79,52.16C53.43,53.07 50.84,52.24 49.43,50.29C48.99,51.31 48.15,52.16 47.04,52.59C44.83,53.44 42.36,52.34 41.51,50.13L40.18,46.62L38.18,47.33C37.75,47.48 37.49,47.89 37.5,48.31C36.6,48.33 35.66,48.14 34.85,47.55C32.96,46.17 33.63,42.36 34.2,40.63L34.2,40.63C34.32,37.51 36.87,35.01 40,35.01C40.55,35.01 41.09,35.09 41.59,35.24C42.1,32.17 44.76,29.83 47.95,29.83C48.56,29.83 49.15,29.91 49.71,30.07C51.85,27.04 55.37,25.07 59.34,25.07Z"
       android:fillColor="#FFF5EF"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M82.96,41.46C83.48,41.28 84.05,41.56 84.24,42.08L84.75,43.56L89.7,41.82C94.66,40.08 100.1,42.7 101.83,47.66L111.91,76.42C113.65,81.38 111.04,86.81 106.07,88.55L101.13,90.28L102,92.74C103.87,92.36 105.79,93.42 106.44,95.28C107.09,97.14 106.25,99.16 104.55,100.04L104.57,100.07L104.09,100.24L104.04,100.25L94.95,103.44L74.31,44.5L82.96,41.46ZM89.41,48.47L86.8,49.38L99.08,84.42L101.69,83.5C104.82,82.4 106.47,78.97 105.37,75.84L97.08,52.15C95.98,49.02 92.55,47.37 89.41,48.47Z"
+      android:pathData="M70.83,35.82C71.35,35.63 71.92,35.91 72.1,36.43L72.5,37.57L75.47,36.53C80.43,34.78 85.85,37.39 87.58,42.35L95.36,64.69C97.09,69.65 94.47,75.09 89.51,76.84L86.55,77.88L87.29,80C88.9,79.69 90.54,80.59 91.1,82.19C91.66,83.79 90.94,85.53 89.48,86.29L89.49,86.33L89.08,86.47C89.06,86.48 89.05,86.49 89.03,86.49L81.25,89.24L63.55,38.39L70.83,35.82ZM75.69,42.1L74.26,42.6L84.79,72.82L86.22,72.32C89.35,71.21 91.01,67.78 89.91,64.64L83.34,45.77C82.25,42.64 78.82,40.99 75.69,42.1Z"
       android:fillColor="#FFC24D"
       android:fillType="evenOdd"/>
   <path
-      android:pathData="M77.54,51.61L92.65,91.36"
+      android:pathData="M66.31,44.53L79.28,78.81"
       android:strokeWidth="5.01108"
       android:fillColor="#00000000"
       android:strokeColor="#FFB661"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M54.57,48.48C54.01,48 52.78,47.49 52.42,49.21C51.85,48.34 50.28,46.99 48.57,48.53C48.97,48.13 49.46,47.18 48.3,46.62"
+      android:pathData="M46.62,41.82C46.14,41.41 45.09,40.97 44.78,42.45C44.29,41.7 42.94,40.53 41.48,41.86C41.81,41.52 42.24,40.7 41.25,40.22"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#FFE1D7"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M40.09,42.07C39.69,41.45 38.68,40.59 37.82,42.12C37.53,41.12 36.45,39.35 34.35,40.31C34.85,40.04 35.61,39.29 34.68,38.41"
+      android:pathData="M34.2,36.29C33.86,35.76 32.99,35.01 32.25,36.34C32.01,35.47 31.08,33.95 29.28,34.77C29.71,34.54 30.36,33.9 29.56,33.13"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#F4D4BC"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M68.62,33.16C67.69,33.49 66.33,34.61 68.39,36.48C66.93,36.49 64.28,37.37 65.35,40.79C65.04,39.96 64.08,38.56 62.7,39.56"
+      android:pathData="M58.67,28.6C57.87,28.89 56.7,29.86 58.47,31.47C57.22,31.48 54.94,32.23 55.87,35.19C55.6,34.47 54.78,33.26 53.59,34.13"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#FFE1D7"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M29.57,21.05m-6.51,0a6.51,6.51 0,1 1,13.03 0a6.51,6.51 0,1 1,-13.03 0"
+      android:pathData="M19.59,18.16a5.59,5.62 0,1 0,11.17 0a5.59,5.62 0,1 0,-11.17 0z"
       android:fillColor="#FCE4D5"/>
   <path
-      android:pathData="M18.54,6.01m-4.51,0a4.51,4.51 0,1 1,9.02 0a4.51,4.51 0,1 1,-9.02 0"
+      android:pathData="M11.86,5.19a3.87,3.89 0,1 0,7.73 0a3.87,3.89 0,1 0,-7.73 0z"
       android:fillColor="#FCE4D5"/>
   <path
-      android:pathData="M56.12,19.04m-10.02,0a10.02,10.02 0,1 1,20.04 0a10.02,10.02 0,1 1,-20.04 0"
+      android:pathData="M39.36,16.43a8.59,8.65 0,1 0,17.19 0a8.59,8.65 0,1 0,-17.19 0z"
       android:fillColor="#FCE4D5"/>
   <path
-      android:pathData="M73.41,5.76m-5.76,0a5.76,5.76 0,1 1,11.53 0a5.76,5.76 0,1 1,-11.53 0"
+      android:pathData="M57.84,4.97a4.94,4.97 0,1 0,9.88 0a4.94,4.97 0,1 0,-9.88 0z"
       android:fillColor="#FCE4D5"/>
   <path
-      android:pathData="M24.63,22.21C24.29,20.79 24.69,18.33 25.27,17.79"
+      android:pathData="M20.94,19.16C20.65,17.93 21,15.81 21.5,15.35"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M24.82,23.82m-0.39,0.38a0.54,0.54 90.56,1 1,0.78 -0.76a0.54,0.54 90.56,1 1,-0.78 0.76"
+      android:pathData="M20.78,20.88a0.47,0.47 90,1 0,0.67 -0.66a0.47,0.47 90,1 0,-0.67 0.66z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M9.32,49C10.27,47.89 12.5,46.77 13.27,46.92"
+      android:pathData="M7.82,42.27C8.63,41.31 10.54,40.34 11.21,40.47"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M8.14,50.11m-0.54,-0.09a0.54,0.54 54.4,1 1,1.07 0.18a0.54,0.54 54.4,1 1,-1.07 -0.18"
+      android:pathData="M6.35,43.15a0.47,0.47 90.15,1 0,0.92 0.15a0.47,0.47 90.15,1 0,-0.92 -0.15z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M50.29,12.7C51.24,11.58 53.46,10.45 54.24,10.6"
+      android:pathData="M42.95,10.95C43.76,9.99 45.67,9.01 46.33,9.14"
       android:strokeLineJoin="round"
       android:strokeWidth="1.00222"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M49.3,13.72m-0.51,-0.18a0.54,0.54 63.82,1 1,1.03 0.35a0.54,0.54 63.82,1 1,-1.03 -0.35"
+      android:pathData="M41.66,11.68a0.47,0.47 90.24,1 0,0.88 0.3a0.47,0.47 90.24,1 0,-0.88 -0.3z"
       android:fillColor="#ffffff"/>
 </vector>
