--- a/app/src/main/res/layout/header_search_ranking.xml
+++ b/app/src/main/res/layout/header_search_ranking.xml
@@ -20,170 +20,154 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <GridLayout
-        android:id="@+id/search_gl"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="2"
-        android:padding="7dp"
-        android:rowCount="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/good_cafe_drink_tv"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_search_hashtag1"
+        android:layout_width="0dp"
+        android:layout_marginTop="17dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_header_icon"
+        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag2"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/good_cafe_drink_tv">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/item_search_hashtag1"
+        <ImageView
+            android:id="@+id/search_iv_1"
             android:layout_width="wrap_content"
+            android:layout_height="82dp"
+            android:paddingTop="10dp"
+            android:paddingStart="13dp"
+            android:paddingEnd="7dp"
+            android:src="@drawable/ic_search_rice"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/search_tv_1"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/search_tv_1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="4dp">
+            android:gravity="center"
+            android:text="집밥"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/search_iv_1"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="82dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="bottom"
-                android:orientation="horizontal">
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:layout_width="95dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:paddingTop="25dp"
-                    android:src="@drawable/ic_search_rice" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_search_hashtag2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/search_header_icon"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/item_search_hashtag1"
+        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag1">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="집밥"
-                    android:layout_marginStart="11dp"
-                    android:gravity="center_vertical|end"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/item_search_hashtag2"
+        <ImageView
+            android:id="@+id/search_iv_2"
             android:layout_width="wrap_content"
+            android:layout_height="82dp"
+            android:paddingStart="13dp"
+            android:paddingTop="13dp"
+            android:src="@drawable/ic_search_cafe"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/search_tv_2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/search_tv_2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="4dp">
+            android:gravity="center"
+            android:text="카페"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/search_iv_2"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="82dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="bottom"
-                android:orientation="horizontal">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_search_hashtag3"
+        android:layout_width="0dp"
+        android:layout_marginTop="17dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_header_icon"
+        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag4"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag1">
 
-                <ImageView
-                    android:layout_width="85dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:paddingTop="33dp"
-                    android:src="@drawable/ic_search_cafe" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="카페"
-                    android:layout_marginStart="18dp"
-                    android:gravity="center_vertical|end"
-                    android:textSize="18sp" />
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/item_search_hashtag3"
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="wrap_content"
+            android:layout_height="82dp"
+            android:paddingTop="8dp"
+            android:paddingStart="10dp"
+            android:src="@drawable/ic_search_pub"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="4dp">
+            android:gravity="center"
+            android:text="술집"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="82dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="bottom"
-                android:orientation="horizontal">
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:layout_width="105dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:paddingTop="35dp"
-                    android:src="@drawable/ic_search_pub" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_search_hashtag4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/search_header_icon"
+        android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/item_search_hashtag3"
+        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag3">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="술집"
-                    android:gravity="center_vertical|end"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/item_search_hashtag4"
+        <ImageView
+            android:id="@+id/imageView4"
             android:layout_width="wrap_content"
+            android:layout_height="82dp"
+            android:paddingStart="8dp"
+            android:paddingTop="4dp"
+            android:src="@drawable/ic_search_bread"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_margin="8dp"
-            app:cardCornerRadius="6dp"
-            app:cardElevation="4dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="82dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:gravity="bottom"
-                android:orientation="horizontal">
+            android:gravity="center"
+            android:text="빵집"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:layout_width="88dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:paddingTop="10dp"
-                    android:src="@drawable/ic_search_bread" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="빵집"
-                    android:layout_marginStart="12dp"
-                    android:gravity="center_vertical|end"
-                    android:textSize="18sp" />
-
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-    </GridLayout>
-
-
-    <TextView
+        <TextView
         android:id="@+id/good_place_myongji"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -192,12 +176,12 @@
         android:text="@string/search_already_food"
         android:textColor="#0E0E0E"
         android:includeFontPadding="false"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="33dp"
         android:paddingBottom="14dp"
         android:textFontWeight="700"
         android:textSize="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_gl" />
+        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag3" />
 
     <Spinner
         android:id="@+id/spSort"
