--- a/app/src/main/res/layout/header_search_ranking.xml
+++ b/app/src/main/res/layout/header_search_ranking.xml
@@ -21,149 +21,144 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_search_hashtag1"
+        android:id="@+id/item_search_hashtag_rice"
         android:layout_width="0dp"
-        android:layout_marginTop="17dp"
         android:layout_height="wrap_content"
         android:background="@drawable/search_header_icon"
-        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag2"
         android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="17dp"
         android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag_cafe"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/good_cafe_drink_tv">
 
         <ImageView
-            android:id="@+id/search_iv_1"
-            android:layout_width="wrap_content"
+            android:id="@+id/icon_header_rice_iv"
+            android:layout_width="120dp"
             android:layout_height="82dp"
             android:paddingTop="10dp"
-            android:paddingStart="13dp"
-            android:paddingEnd="7dp"
             android:src="@drawable/ic_search_rice"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/search_tv_1"
+            app:layout_constraintEnd_toStartOf="@+id/icon_header_rice_tv"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/search_tv_1"
+            android:id="@+id/icon_header_rice_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="집밥"
+            android:text="@string/search_univ_rice"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/search_iv_1"
+            app:layout_constraintStart_toEndOf="@+id/icon_header_rice_iv"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_search_hashtag2"
+        android:id="@+id/item_search_hashtag_cafe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/search_header_icon"
         android:elevation="4dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_search_hashtag1"
-        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag1">
+        app:layout_constraintStart_toEndOf="@id/item_search_hashtag_rice"
+        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag_rice">
 
         <ImageView
-            android:id="@+id/search_iv_2"
-            android:layout_width="wrap_content"
+            android:id="@+id/icon_header_cafe_iv"
+            android:layout_width="120dp"
             android:layout_height="82dp"
-            android:paddingStart="13dp"
             android:paddingTop="13dp"
             android:src="@drawable/ic_search_cafe"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/search_tv_2"
+            app:layout_constraintEnd_toStartOf="@+id/icon_header_cafe_tv"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/search_tv_2"
+            android:id="@+id/icon_header_cafe_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="카페"
+            android:text="@string/search_univ_cafe"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/search_iv_2"
+            app:layout_constraintStart_toEndOf="@+id/icon_header_cafe_iv"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_search_hashtag3"
+        android:id="@+id/item_search_hashtag_pub"
         android:layout_width="0dp"
-        android:layout_marginTop="17dp"
         android:layout_height="wrap_content"
         android:background="@drawable/search_header_icon"
-        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag4"
         android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="17dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag1">
+        app:layout_constraintEnd_toStartOf="@id/item_search_hashtag_bread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag_cafe">
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
+            android:id="@+id/icon_header_pub_iv"
+            android:layout_width="120dp"
             android:layout_height="82dp"
             android:paddingTop="8dp"
-            android:paddingStart="10dp"
             android:src="@drawable/ic_search_pub"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintEnd_toStartOf="@+id/icon_header_pub_tv"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/icon_header_pub_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="술집"
+            android:text="@string/search_univ_drink"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintStart_toEndOf="@+id/icon_header_pub_iv"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_search_hashtag4"
+        android:id="@+id/item_search_hashtag_bread"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/search_header_icon"
         android:elevation="4dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/item_search_hashtag3"
-        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag3">
+        app:layout_constraintStart_toEndOf="@id/item_search_hashtag_pub"
+        app:layout_constraintTop_toTopOf="@+id/item_search_hashtag_pub">
 
         <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/icon_header_bread_iv"
+            android:layout_width="120dp"
             android:layout_height="82dp"
-            android:paddingStart="8dp"
-            android:paddingTop="4dp"
+            android:paddingTop="6dp"
             android:src="@drawable/ic_search_bread"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintEnd_toStartOf="@+id/icon_header_bread_tv"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/icon_header_bread_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="빵집"
+            android:text="@string/search_univ_bread"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintStart_toEndOf="@+id/icon_header_bread_iv"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -181,7 +176,7 @@
         android:textFontWeight="700"
         android:textSize="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag3" />
+        app:layout_constraintTop_toBottomOf="@id/item_search_hashtag_pub" />
 
     <Spinner
         android:id="@+id/spSort"
